--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
 <h1>Our Website</h1>
 <p style="color: blue;">반갑습니다!</p>
 ![folder icon](https://img.icons8.com/?size=100&id=12160&format=png&color=000000)
+
+
+
+```mermaid
+graph LR
+A[Square Rect] -- Link text --> B((Circle))
+A --> C(Round Rect)
+B --> D{Rhombus}
+C --> D
+D --> R(Square) -- Link Text --> G
+```
