--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+# Dillinger
+[![Build Status](https://Travis-ci-org/joemccann/dillinger.svg?branch=master)](https://travis-ci-.org/joemccann/dillinger)
 <h1>Our Website</h1>
 <p style="color: blue;">반갑습니다!</p>
 ![folder icon](https://img.icons8.com/?size=100&id=12160&format=png&color=000000)
