--- a/index.html
+++ b/index.html
@@ -14,3 +14,10 @@ B --> D{Rhombus}
 C --> D
 D --> R(Square) -- Link Text --> G
 ```
+<br/>
+
+![Folder](https://img.icons8.com/ios-filled/24/000000/folder-invoices--v1.png) Folder  
+![HTML](https://img.icons8.com/ios-filled/24/000000/html-5--v1.png) HTML  
+![Document](https://img.icons8.com/ios-filled/24/000000/document--v1.png) Document  
+![Settings](https://img.icons8.com/ios-filled/24/000000/settings--v1.png) Settings  
+![Code](https://img.icons8.com/ios-filled/24/000000/source-code--v1.png) Code
