--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
 # Dillinger
 [![Build Status](https://Travis-ci-org/joemccann/dillinger.svg?branch=master)](https://travis-ci-.org/joemccann/dillinger)
 <h1>Our Website</h1>
