--- a/index.html
+++ b/index.html
@@ -1,65 +1,93 @@
-<h1 id="folder-">Folder 관리 규칙을 정의 합니다.</h1>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <title>Folder 관리 규칙</title>
+</head>
+<body>
+
+<h1>📁 Folder 관리 규칙을 정의 합니다.</h1>
 <ul>
-<li>기존의 Old 프로젝트와 현시점 Origin 프로젝트 간의 정리 필요성이 필요로 하여 규칙을 정의 한다. </li>
-<li>25.07.15 기준 이후 각 프로젝트별 해당 BOM List관리 시행을 해야 한다.</li>
-<li>Bom 관리 기준은 <strong>대리급</strong> 부터 시작한다.
--- 프로젝트 진행 시작 시점에 견적서 기준으로 1차 작성한다.
--- 프로젝트 진행 中 변동된 Hw 및 Sw에 대한 2차 update 진행 한다.
--- 프로젝트 종료 시점 최종 내용을 작성한다. 
--- <strong>History 이력 작성 해야 한다.</strong> 가능한 excel 및 txt로 정리 할것<blockquote>
-<p>History 예시 (ex : 구매 물품 대신 기존의 재고 물품사용, 추가 발주 사항 등...)
-Bom 문서에 대한 내용은 이후 정해질 것으로 예상됨.</p>
-<h2 id="folder-">Folder 규칙 정의 내용 정리</h2>
-</blockquote>
-</li>
-<li><a href="#생성규칙">생성 규칙 Category</a></li>
-<li><a href="#구조">프로젝트 폴더 구분 세부 사항</a></li>
-<li><a href="#code-quality-check">Resources</a></li>
+  <li>기존의 Old 프로젝트와 현시점 Origin 프로젝트 간의 정리 필요성이 필요로 하여 규칙을 정의 한다.</li>
+  <li>25.07.15 기준 이후 각 프로젝트별 해당 BOM List 관리 시행을 해야 한다.</li>
+  <li>Bom 관리 기준은 <strong>대리급</strong> 부터 시작한다.
+    <ul>
+      <li>프로젝트 진행 시작 시점에 견적서 기준으로 1차 작성한다.</li>
+      <li>프로젝트 진행 中 변동된 Hw 및 Sw에 대한 2차 update 진행 한다.</li>
+      <li>프로젝트 종료 시점 최종 내용을 작성한다.</li>
+      <li><strong>History 이력 작성 해야 한다.</strong> 가능한 excel 및 txt로 정리 할것</li>
+    </ul>
+    <blockquote>
+      <p>History 예시 (ex : 구매 물품 대신 기존의 재고 물품사용, 추가 발주 사항 등...)</p>
+      <p>Bom 문서에 대한 내용은 이후 정해질 것으로 예상됨.</p>
+    </blockquote>
+  </li>
+</ul>
+
+<h2>📁 Folder 규칙 정의 내용 정리</h2>
+<ul>
+  <li><a href="#생성규칙">생성 규칙 Category</a></li>
+  <li><a href="#구조">프로젝트 폴더 구분 세부 사항</a></li>
+  <li><a href="#code-quality-check">Resources</a></li>
 </ul>
 <hr>
-<h2 id="-category">생성 규칙 Category</h2>
-<table>
-<thead>
-<tr>
-<th>연도별</th>
-<th>고객사 별</th>
-<th>프로젝트 이름</th>
-<th>업무 카테고리 분류</th>
-<th>업무 진행 순서 및 세부사항</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>2025</td>
-<td>한글 필수</td>
-<td>한글<em>영문 (</em>) underbar 사용</td>
-<td>폴더 순서 별로</td>
-<td>폴더별 버전 관리 및 readme.txt기록</td>
-</tr>
-</tbody>
+
+<h2 id="생성규칙">✅ 생성 규칙 Category</h2>
+<table border="1" cellspacing="0" cellpadding="6">
+  <thead>
+    <tr>
+      <th>연도별</th>
+      <th>고객사 별</th>
+      <th>프로젝트 이름</th>
+      <th>업무 카테고리 분류</th>
+      <th>업무 진행 순서 및 세부사항</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>2025</td>
+      <td>한글 필수</td>
+      <td>한글_영문 (_) underbar 사용</td>
+      <td>폴더 순서 별로</td>
+      <td>폴더별 버전 관리 및 readme.txt 기록</td>
+    </tr>
+  </tbody>
 </table>
+
 <hr>
-<h3 id="-">프로젝트 폴더 구분 세부 사항</h3>
+
+<h3 id="구조">📁 프로젝트 폴더 구분 세부 사항</h3>
 <blockquote>
-<p><strong>생성 규칙 Category</strong> 참조하여 아래의 (1) ~ (5) 순서로 프로젝트를 관리 한다.</p>
-<ul>
-<li>연도별</li>
-<li>각 고객사 이름</li>
-<li>각 프로젝트의 이름</li>
-<li>프로젝트의 업무 카테고리 분류</li>
-<li>업무 진행 순차 번호 및 세부 사항<h2 id="-1-">생성 예시를 그림(1) 과 같이 참조 하여 작성 한다.</h2>
-ex::그림(1)
-<img src="https://img.icons8.com/?size=30&amp;id=12160&amp;format=png&amp;color=000000" alt="folder icon"> 2025
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&amp;id=12160&amp;format=png&amp;color=000000" alt="folder icon"> 삼성 디스플레이 베트남
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&amp;id=12160&amp;format=png&amp;color=000000" alt="folder icon">IT_혁신_4호기_MAIN_SUB_METAL_LAMI
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&amp;id=12160&amp;format=png&amp;color=000000" alt="folder icon">01. 견적서
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&amp;id=12160&amp;format=png&amp;color=000000" alt="folder icon">02. BOM List
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&amp;id=12160&amp;format=png&amp;color=000000" alt="folder icon">03. 검토 이미지 및 결과
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&amp;id=12160&amp;format=png&amp;color=000000" alt="folder icon">04. 도면
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&amp;id=12160&amp;format=png&amp;color=000000" alt="folder icon">05. 문서
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&amp;id=12160&amp;format=png&amp;color=000000" alt="folder icon">06. 체크시트
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&amp;id=12160&amp;format=png&amp;color=000000" alt="folder icon">07. 사양서
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&amp;id=12160&amp;format=png&amp;color=000000" alt="folder icon">08. CTQ</li>
-</ul>
-<p><img src="https://img.icons8.com/ios-filled/24/000000/document--v1.png" alt="Document"> Readme.txt 파일 작성 </p>
+  <p><strong>생성 규칙 Category</strong> 참조하여 아래의 (1) ~ (5) 순서로 프로젝트를 관리 한다.</p>
+  <ul>
+    <li>연도별</li>
+    <li>각 고객사 이름</li>
+    <li>각 프로젝트의 이름</li>
+    <li>프로젝트의 업무 카테고리 분류</li>
+    <li>업무 진행 순차 번호 및 세부 사항</li>
+  </ul>
 </blockquote>
+
+<h3>📂 생성 예시를 그림(1)과 같이 참조 하여 작성 한다.</h3>
+<p><strong>ex::그림(1)</strong></p>
+<div style="font-family:monospace; white-space:pre;">
+<img src="https://img.icons8.com/?size=30&id=12160&format=png&color=000000"/> 2025  
+&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&id=12160&format=png&color=000000"/> 삼성 디스플레이 베트남  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&id=12160&format=png&color=000000"/> IT_혁신_4호기_MAIN_SUB_METAL_LAMI  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&id=12160&format=png&color=000000"/> 01. 견적서  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&id=12160&format=png&color=000000"/> 02. BOM List  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&id=12160&format=png&color=000000"/> 03. 검토 이미지 및 결과  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&id=12160&format=png&color=000000"/> 04. 도면  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&id=12160&format=png&color=000000"/> 05. 문서  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&id=12160&format=png&color=000000"/> 06. 체크시트  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&id=12160&format=png&color=000000"/> 07. 사양서  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&id=12160&format=png&color=000000"/> 08. CTQ  
+</div>
+
+<p>
+  <img src="https://img.icons8.com/ios-filled/24/000000/document--v1.png" alt="document icon" />
+  <strong>Readme.txt</strong> 파일 작성
+</p>
+
+</body>
+</html>
