--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 
-<h1>📁 Folder 관리 규칙을 정의 합니다.</h1>
+<h1>📝 Folder 관리 규칙을 정의 합니다.</h1>
 <ul>
+    <li> **localServer -> 001.PC -> 2025 Projects** 에 진행 한다. </li>
   <li>기존의 Old 프로젝트와 현시점 Origin 프로젝트 간의 정리 필요성이 필요로 하여 규칙을 정의 한다.</li>
   <li>25.07.15 기준 이후 각 프로젝트별 해당 BOM List 관리 시행을 해야 한다.</li>
   <li>Bom 관리 기준은 <strong>대리급</strong> 부터 시작한다.
@@ -24,7 +25,7 @@
   </li>
 </ul>
 
-<h2>📁 Folder 규칙 정의 내용 정리</h2>
+<h2>❗ Folder 규칙 정의 내용 정리</h2>
 <ul>
   <li><a href="#생성규칙">생성 규칙 Category</a></li>
   <li><a href="#구조">프로젝트 폴더 구분 세부 사항</a></li>
