--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <h1>📝 Folder 관리 규칙을 정의 합니다.</h1>
 <ul>
-    <li> **localServer -> 001.PC -> 2025 Projects** 에 진행 한다. </li>
+    <li> <strong>localServer -> 001.PC -> 2025 Projects</strong> 에 진행 한다. </li>
   <li>기존의 Old 프로젝트와 현시점 Origin 프로젝트 간의 정리 필요성이 필요로 하여 규칙을 정의 한다.</li>
   <li>25.07.15 기준 이후 각 프로젝트별 해당 BOM List 관리 시행을 해야 한다.</li>
   <li>Bom 관리 기준은 <strong>대리급</strong> 부터 시작한다.
