--- a/index.html
+++ b/index.html
@@ -91,4 +91,10 @@
 </p>
 
 </body>
+
+  <footer style="color: gray; text-align: right; font-size: 0.9em; margin-top: 40px;">
+  작성일: 2025.07.15_rev1
+  </footer>
 </html>
+
+
