--- a/index.html
+++ b/index.html
@@ -3,26 +3,106 @@
 <head>
   <meta charset="UTF-8">
   <title>Folder 관리 규칙</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 40px;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+
+    h1 {
+      color: #2c3e50;
+      border-bottom: 2px solid #3498db;
+      padding-bottom: 10px;
+    }
+
+    h2, h3 {
+      color: #2c3e50;
+      margin-top: 40px;
+    }
+
+    ul {
+      line-height: 1.8;
+    }
+
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-top: 10px;
+    }
+
+    table, th, td {
+      border: 1px solid #ccc;
+    }
+
+    th {
+      background-color: #f2f2f2;
+      font-weight: bold;
+      text-align: center;
+    }
+
+    td {
+      padding: 8px;
+      text-align: center;
+    }
+
+    blockquote {
+      background: #f4f4f4;
+      padding: 10px 15px;
+      border-left: 5px solid #3498db;
+      margin: 15px 0;
+    }
+
+    .folder-structure {
+      font-family: monospace;
+      white-space: pre;
+      background-color: #fff;
+      padding: 15px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+    }
+
+    footer {
+      background-color: #eee;
+      border: 1px solid #ccc;
+      padding: 10px 15px;
+      text-align: right;
+      font-size: 0.9em;
+      color: #555;
+      margin-top: 60px;
+      border-radius: 5px;
+    }
+
+    a {
+      color: #3498db;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
 
 <h1>📝 Folder 관리 규칙을 정의 합니다.</h1>
 <ul>
-    <li> <strong>localServer -> 001.PC -> 2025 Projects</strong> 에 진행 한다. </li>
-  <li>기존의 Old 프로젝트와 현시점 Origin 프로젝트 간의 정리 필요성이 필요로 하여 규칙을 정의 한다.</li>
-  <li>25.07.15 기준 이후 각 프로젝트별 해당 BOM List 관리 시행을 해야 한다.</li>
-  <li>Bom 관리 기준은 <strong>대리급</strong> 부터 시작한다.
-    <ul>
-      <li>프로젝트 진행 시작 시점에 견적서 기준으로 1차 작성한다.</li>
-      <li>프로젝트 진행 中 변동된 Hw 및 Sw에 대한 2차 update 진행 한다.</li>
-      <li>프로젝트 종료 시점 최종 내용을 작성한다.</li>
-      <li><strong>History 이력 작성 해야 한다.</strong> 가능한 excel 및 txt로 정리 할것</li>
-    </ul>
-    <blockquote>
-      <p>History 예시 (ex : 구매 물품 대신 기존의 재고 물품사용, 추가 발주 사항 등...)</p>
-      <p>Bom 문서에 대한 내용은 이후 정해질 것으로 예상됨.</p>
-    </blockquote>
-  </li>
+    <li><strong>localServer → 001.PC → 2025 Projects</strong> 에 진행 한다.</li>
+    <li>기존의 Old 프로젝트와 현시점 Origin 프로젝트 간의 정리 필요성이 필요로 하여 규칙을 정의 한다.</li>
+    <li>25.07.15 기준 이후 각 프로젝트별 해당 BOM List 관리 시행을 해야 한다.</li>
+    <li>BOM 관리 기준은 <strong>대리급</strong> 부터 시작한다.
+      <ul>
+        <li>프로젝트 진행 시작 시점에 견적서 기준으로 1차 작성한다.</li>
+        <li>프로젝트 진행 中 변동된 Hw 및 Sw에 대한 2차 update 진행 한다.</li>
+        <li>프로젝트 종료 시점 최종 내용을 작성한다.</li>
+        <li><strong>History 이력 작성 해야 한다.</strong> 가능한 excel 및 txt로 정리 할것</li>
+      </ul>
+      <blockquote>
+        <p>History 예시 (ex : 구매 물품 대신 기존의 재고 물품사용, 추가 발주 사항 등...)</p>
+        <p>BOM 문서에 대한 내용은 이후 정해질 것으로 예상됨.</p>
+      </blockquote>
+    </li>
 </ul>
 
 <h2>❗ Folder 규칙 정의 내용 정리</h2>
@@ -34,7 +114,7 @@
 <hr>
 
 <h2 id="생성규칙">✅ 생성 규칙 Category</h2>
-<table border="1" cellspacing="0" cellpadding="6">
+<table>
   <thead>
     <tr>
       <th>연도별</th>
@@ -71,30 +151,27 @@
 
 <h3>📂 생성 예시를 그림(1)과 같이 참조 하여 작성 한다.</h3>
 <p><strong>ex::그림(1)</strong></p>
-<div style="font-family:monospace; white-space:pre;">
-<img src="https://img.icons8.com/?size=30&id=12160&format=png&color=000000"/> 2025  
-&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&id=12160&format=png&color=000000"/> 삼성 디스플레이 베트남  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&id=12160&format=png&color=000000"/> IT_혁신_4호기_MAIN_SUB_METAL_LAMI  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&id=12160&format=png&color=000000"/> 01. 견적서  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&id=12160&format=png&color=000000"/> 02. BOM List  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&id=12160&format=png&color=000000"/> 03. 검토 이미지 및 결과  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&id=12160&format=png&color=000000"/> 04. 도면  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&id=12160&format=png&color=000000"/> 05. 문서  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&id=12160&format=png&color=000000"/> 06. 체크시트  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&id=12160&format=png&color=000000"/> 07. 사양서  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/?size=30&id=12160&format=png&color=000000"/> 08. CTQ  
+<div class="folder-structure">
+📁 2025  
+    📁 삼성 디스플레이 베트남  
+        📁 IT_혁신_4호기_MAIN_SUB_METAL_LAMI  
+            📁 01. 견적서  
+            📁 02. BOM List  
+            📁 03. 검토 이미지 및 결과  
+            📁 04. 도면  
+            📁 05. 문서  
+            📁 06. 체크시트  
+            📁 07. 사양서  
+            📁 08. CTQ  
 </div>
 
 <p>
-  <img src="https://img.icons8.com/ios-filled/24/000000/document--v1.png" alt="document icon" />
-  <strong>Readme.txt</strong> 파일 작성
+  📄 <strong>Readme.txt</strong> 파일 작성
 </p>
 
-</body>
-
-  <footer style="color: gray; text-align: right; font-size: 0.9em; margin-top: 40px;">
+<footer>
   작성일: 2025.07.15_rev1
-  </footer>
+</footer>
+
+</body>
 </html>
-
-
